<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">GreenStreet CRM</string>

    <string name="description_logo">GreenStreet CRM</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_star">Star</string>
    <string name="description_add">Add</string>
    <string name="description_save">Save</string>
    
    <string name="title_starred">Starred</string>
    
    <string name="starred_jobs">Jobs</string>
    <string name="starred_customers">Customers</string>
    
    <string name="title_tagstream">Coming Soon...</string>
    
    <string name="btn_schedule">Schedule</string>
    <string name="btn_map">Map</string>
    <string name="btn_jobs">Jobs</string>
    <string name="btn_starred">Starred</string>
    <string name="btn_customers">Customers</string>
    <string name="btn_announcements">Bulletin</string>
    
    <string name="empty_jobs">No jobs found.</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="empty_customers">No customers found.</string>
    <string name="empty_search">No search results found.</string>
    <string name="empty_links">No links available.</string>
    
    <string name="job_check1">Prep FS and invoice</string>
    <string name="job_check2">Complete Audit</string>
    <string name="job_check3">Close out, create WO and recreate FS </string>
    <string name="job_check4">Recurve Stage</string>
    <string name="job_check5">Call Back</string>
    <string name="job_check6">Limbo</string>
    <string name="job_check7">Complete Workscope</string>
    <string name="job_check8">Retro Stage </string>
    <string name="job_check9">Complete all FS, WO</string>
    <string name="job_check10">Pop Bubbly</string>
    
    <string name="hint_first">First</string>
    <string name="hint_last">Last</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    
    <string name="session_requirements">Requirements</string>
    <string name="session_speakers">Speakers</string>
    
    <!-- Notes integration -->
    <string name="notes_catch_powered_by">Notes are powered by <a href="http://www.catch.com/">Catch.com</a>.</string>
    <string name="notes_catch_market_title">Install Catch Notes</string>
    <string name="notes_catch_market_subtitle">You can take notes for Google I/O sessions using the latest version of Catch Notes, available from Android Market.</string>
    <string name="notes_catch_new_title">Create a new note</string>
    <string name="notes_catch_view_title">View track notes</string>
    <string name="toast_notes_error_invoking">Couldn\'t start Catch Notes.</string>
    
    <string name="permission_write">Modify GreenStreet CRM data</string>

</resources>