<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout 
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/body_padding_large"
    android:paddingRight="@dimen/body_padding_large"
    android:paddingTop="@dimen/body_padding_medium"
    android:paddingBottom="@dimen/body_padding_medium" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:hint="@string/hint_last"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/firstName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lastName"
        android:layout_alignBottom="@+id/lastName"
        android:layout_toRightOf="@+id/lastName"
        android:hint="@string/hint_first"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lastName"
        android:text="Company"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/company"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:inputType="textCapWords"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/company"
        android:text="Address"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/address"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:hint="@string/hint_street"
        android:inputType="textPostalAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/city"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/address"
        android:layout_centerVertical="true"
        android:hint="@string/hint_city"
        android:inputType="textCapWords"
        android:singleLine="true" />

    <EditText
        android:id="@+id/state"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/city"
        android:hint="@string/hint_state"
        android:inputType="textCapCharacters"
        android:maxLength="2"
        android:nextFocusDown="@+id/zipcode"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/zipcode"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_toRightOf="@+id/state"
        android:hint="@string/hint_zip"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/state"
        android:text="Phone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:inputType="phone" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phone"
        android:text="Mobile"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mobile"
        android:text="Email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:inputType="textEmailAddress" />

</RelativeLayout>
</ScrollView>